[gd_scene load_steps=8 format=3 uid="uid://babmprami716i"]

[ext_resource type="Script" uid="uid://dlrfyp16w787" path="res://menu/pause/pause.gd" id="1_qv17v"]
[ext_resource type="Theme" uid="uid://cgwl3x7ylufla" path="res://menu/pause/pause.tres" id="1_rkexb"]
[ext_resource type="PackedScene" uid="uid://vvsyuwvn1dli" path="res://menu/_custom/arrow_button.tscn" id="2_7s5im"]
[ext_resource type="Texture2D" uid="uid://8x4717mrf2sg" path="res://map/assets/cat paw print.png" id="3_qv17v"]
[ext_resource type="Texture2D" uid="uid://e4pgq1i1cxg0" path="res://menu/pause/pause.png" id="4_unsro"]
[ext_resource type="Texture2D" uid="uid://bdtt3bnqtpvee" path="res://menu/pause/restart.png" id="5_xuu8x"]
[ext_resource type="PackedScene" uid="uid://blb67v3l3aki5" path="res://menu/settings/settings.tscn" id="7_unsro"]

[node name="InGameLayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qv17v")

[node name="PauseBox" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -473.0
offset_top = -336.0
offset_right = 473.0
offset_bottom = 336.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rkexb")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseBox"]
layout_mode = 2
theme_override_constants/separation = 80
alignment = 1

[node name="Label" type="Label" parent="PauseBox/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"HeaderOne"
text = "Paused"

[node name="VBoxContainer" type="VBoxContainer" parent="PauseBox/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ResumeButton" parent="PauseBox/VBoxContainer/VBoxContainer" instance=ExtResource("2_7s5im")]
layout_mode = 2
size_flags_horizontal = 4
text = "Resume"

[node name="SettingsButton" parent="PauseBox/VBoxContainer/VBoxContainer" instance=ExtResource("2_7s5im")]
layout_mode = 2
size_flags_horizontal = 4
text = "Settings"

[node name="ExitToTitleButton" parent="PauseBox/VBoxContainer/VBoxContainer" instance=ExtResource("2_7s5im")]
layout_mode = 2
size_flags_horizontal = 4
text = "Exit to Title"

[node name="TextureRect" type="TextureRect" parent="PauseBox"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("3_qv17v")
stretch_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 16.0
offset_right = 257.0
offset_bottom = 151.0

[node name="TextureButton" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
focus_mode = 0
texture_normal = ExtResource("4_unsro")

[node name="TextureButton2" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
focus_mode = 0
texture_normal = ExtResource("5_xuu8x")

[node name="Settings" parent="." instance=ExtResource("7_unsro")]
visible = false
layout_mode = 1

[connection signal="pressed" from="PauseBox/VBoxContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseBox/VBoxContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PauseBox/VBoxContainer/VBoxContainer/ExitToTitleButton" to="." method="_on_exit_to_title_button_pressed"]
[connection signal="pressed" from="HBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="HBoxContainer/TextureButton2" to="." method="_on_texture_button_2_pressed"]
